--- a/EpicComics/EpicComics.html
+++ b/EpicComics/EpicComics.html
@@ -27,6 +27,7 @@
 <div class="mySlides" style="text-align: center;"><img src="../AtomicAge/AtomicAge1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../BloodATale/BloodATale.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Blueberry/Blueberry1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../BratsBizarre/BratsBizarre1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../CadillacsAndDinosaurs/CadillacsAndDinosaurs1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../CaptainConfederacy/CaptainConfederacy.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../CarWarriors/CarWarriors.jpg"></div>
@@ -40,12 +41,12 @@
 <div class="mySlides" style="text-align: center;"><img src="../CrashRyan/CrashRyan.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../CrimsonDynamo/CrimsonDynamo.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Epic5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Dreadlands/Dreadlands.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Dreadstar/Dreadstar01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../DragonLines/DragonLines.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Epic7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Epic7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../ElsewherePrince/ElsewherePrince1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Epic/Epic1.jpg"></div>
@@ -79,6 +80,7 @@
 <div class="mySlides" style="text-align: center;"><img src="../LieutenantBlueberry/LieutenantBlueberry.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../LightAndDarknessWar/LightAndDarknessWar.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../MarshalLaw/MarshalLaw.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Epic5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic24.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../MetropolAD/MetropolAD1.jpg"></div>
@@ -88,40 +90,41 @@
 <div class="mySlides" style="text-align: center;"><img src="../ChollyFlytrap/ChollyFlytrapNewAdventures.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Olympians/Olympians1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../OneEpic/One1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../OnyxOverlord/OnyxOverlord.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../OnyxOverlord/OnyxOverlord1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Pinhead/Pinhead1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Pinhead/PinheadVsML1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../PlasticForks/PlasticForks.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../PlasticForks/PlasticForks1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Powerline/Powerline1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../Psychonauts/Psychonauts.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../SachsAndViolens/SachsAndViolens.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Psychonauts/Psychonauts1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SachsAndViolens/SachsAndViolens1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic26.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../SamuraiCat/SamuraiCat.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../ShadowlineSaga/ShadowlineSaga.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SamuraiCat/SamuraiCat1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ShadowlineSaga/ShadowlineSaga1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic27.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../SisterhoodOfSteel/SisterhoodOfSteel.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../SixFromSirius/SixFromSirius.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../SleezeBrothers/SleezeBrothers.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic28.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../Spyke/Spyke.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../StGeorge/StGeorge.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../Stalkers/Stalkers.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Spyke/Spyke1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../StGeorge/StGeorge1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Stalkers/Stalkers1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic29.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Starstruck/Starstruck1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../SteelgripStarkey/SteelgripStarkey.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SteelgripStarkey/SteelgripStarkey1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../StrangeCombatTales/StrangeCombatTales1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../StrayToasters/StrayToasters.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwordsOfTheSwashbucklers/SwordsOfTheSwashbucklers.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Timespirits/Timespirits1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic30.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../Timespirits/Timespirits.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Epic31.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../TomorrowKnights/TomorrowKnights.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../TransmutationOfIkeGaruda/TransmutationOfIkeGaruda.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TomorrowKnights/TomorrowKnights1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TransmutationOfIkeGaruda/TransmutationOfIkeGaruda1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Trouble/Trouble.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../TroubleWithGirls/TroubleWithGirls.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TroubleWithGirls/TroubleWithGirls1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../VideoJack/VideoJack.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../VoidIndigo/VoidIndigo.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../WarMan/WarMan.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../WeaveWorld/WeaveWorld.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WeaveWorld/WeaveWorld25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../WildCards/WildCards.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../WilliamShatnerTekWar/WilliamShatnerTekWar.jpg"></div>
 
@@ -150,6 +153,7 @@ Titles
 <li><a href="../BloodATale/BloodATale.html">Blood: A Tale</a> (1988)
 <li><a href="../Blueberry/Blueberry.html">Blueberry</a> (1989)
 <li><a href="../BozzChronicles/BozzChronicles.html">Bozz Chronicles</a> (1985)
+<li><a href="../BratsBizarre/BratsBizarre.html">Brats Bizarre</a> (1994)
 <li><a href="../CadillacsAndDinosaurs/CadillacsAndDinosaurs.html">Cadillacs and Dinosaurs</a> (1990)
 <li><a href="../CaptainConfederacy/CaptainConfederacy.html">Captain Confederacy</a> (1991)
 <li><a href="../CarWarriors/CarWarriors.html">Car Warriors</a> (1991)
@@ -163,12 +167,12 @@ Titles
 <li><a href="../CrashRyan/CrashRyan.html">Crash Ryan</a> (1984)
 <li><a href="../CrimsonDynamo/CrimsonDynamo.html">Crimson Dynamo</a> (2003)
 <li><a href="../ShadowlineSaga/ShadowlineSaga.html">Critical Mass: A Shadowline Saga</a> (1989)
-<li><a href="Epic5.jpg">Crime and Punishment Marshal Law Takes Manhattan</a> (1989)
 <li><a href="Epic6.jpg">Doctor Zero</a> (1988)
 <li><a href="../DragonLines/DragonLines.html">Dragon Lines</a> (1993)
+<li><a href="../Dreadlands/Dreadlands.html">Dreadlands</a> (1992)
 <li><a href="../Dreadstar/Dreadstar.html">Dreadstar</a> (1982)
-<li><a href="Epic7.jpg">Elektra: Assassin</a> (1987)
 <li><a href="Epic8.jpg">Elektra Lives Again</a> (1990)
+<li><a href="Epic7.jpg">Elektra: Assassin</a> (1987)
 <li><a href="Epic9.jpg">Elfquest</a> (1985)
 <li><a href="../ElsewherePrince/ElsewherePrince.html">Elsewhere Prince</a> (1990)
 <li><a href="../Epic/Epic.html">Epic Anthology</a> (1992)
@@ -187,7 +191,7 @@ Titles
 <li><a href="Epic18.jpg">Groo: The Groo Festival</a> (1993)
 <li><a href="Epic22.jpg">Groo: The Life of Groo</a> (1993)
 <li><a href="Epic19.jpg">Gun Theory</a> (2003)
-<li><a href="../HarveyKurtzman/HarveyKurtzman.html">Harvey Kurtzman's Strange Adventures</a>
+<li><a href="../HarveyKurtzman/HarveyKurtzman.html">Harvey Kurtzman's Strange Adventures</a> (1990)
 <li><a href="../Meltdown/Meltdown.html">Havok &amp; Wolverine Meltdown</a> (1988)
 <li><a href="../Hellhound/Hellhound.html">Hellhound</a> (1993)
 <li><a href="../HellraiserNightbreed/HellraiserNightbreed.html">Hellraiser Nightbreed: Jihad</a> (1991)
@@ -203,12 +207,13 @@ Titles
 <li><a href="../LieutenantBlueberry/LieutenantBlueberry.html">Lieutenant Blueberry</a> (1991)
 <li><a href="../LightAndDarknessWar/LightAndDarknessWar.html">Light and Darkness War</a> (1988)
 <li><a href="../MarshalLaw/MarshalLaw.html">Marshal Law</a> (1987)
+<li><a href="Epic5.jpg">Marshal Law: Crime and Punishment Takes Manhattan</a> (1989)
 <li><a href="Epic23.jpg">Memories</a> (1992)
+<li><a href="Epic25.jpg">Metallic Memories</a> (1992)
 <li><a href="Epic24.jpg">Metropol</a> (1991)
 <li><a href="../MetropolAD/MetropolAD.html">Metropol A.D.</a> (1992)
-<li><a href="../Moebius/Moebius.html">Moebius</a> (1987)
-<li><a href="Epic25.jpg">Metallic Memories</a> (1992)
 <li><a href="../MidnightMen/MidnightMen.html">Midnight Men</a> (1993)
+<li><a href="../Moebius/Moebius.html">Moebius</a> (1987)
 <li><a href="../Moonshadow/Moonshadow.html">Moonshadow</a> (1985)
 <li><a href="../Mutatis/Mutatis.html">Mutatis</a> (1992)
 <li><a href="../MarvelGraphicNovel/MarvelGraphicNovel052.jpg">Neuromancer</a> (1989)
@@ -238,10 +243,11 @@ Titles
 <li><a href="Epic29.jpg">Stars My Destination</a> (1992)
 <li><a href="../Starstruck/Starstruck.html">Starstruck</a> (1985)
 <li><a href="../SteelgripStarkey/SteelgripStarkey.html">Steelgrip Starkey</a> (1986)
+<li><a href="../StrangeCombatTales/StrangeCombatTales.html">Strange Combat Tales</a> (1993)
 <li><a href="../StrayToasters/StrayToasters.html">Stray Toasters</a> (1988)
-<li><a href="Epic30.jpg">Swords of the Swashbucklers</a> (1985)
+<li><a href="../SwordsOfTheSwashbucklers/SwordsOfTheSwashbucklers.html">Swords of the Swashbucklers</a> (1985)
 <li><a href="../Timespirits/Timespirits.html">Timespirits</a> (1984)
-<li><a href="Epic31.jpg">Tomb of Dracula</a> (1991)
+<li><a href="Epic30.jpg">Tomb of Dracula</a> (1991)
 <li><a href="../TomorrowKnights/TomorrowKnights.html">Tomorrow Knights</a> (1990)
 <li><a href="../TransmutationOfIkeGaruda/TransmutationOfIkeGaruda.html">Transmutation of Ike Garuda</a> (1991)
 <li><a href="../Trouble/Trouble.html">Trouble</a> (2003)
