--- a/index.html
+++ b/index.html
@@ -800,6 +800,13 @@
 </tr>
 
 <tr>
+<td>67 Seconds</td>
+<td>1992</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>68</td>
 <td>2006</td>
 <td>Image</td>
@@ -1413,6 +1420,13 @@
 <td>1989</td>
 <td>Atomeka</td>
 <td><a href="A1/A1.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A1</td>
+<td>1992</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3212,7 +3226,7 @@
 <tr>
 <td>Airtight Garage</td>
 <td>1987</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="AirtightGarage/AirtightGarage.html">Details</a></td>
 </tr>
 
@@ -3289,7 +3303,7 @@
 <tr>
 <td>Akira</td>
 <td>1982</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="Akira/akira.html">Details</a></td>
 </tr>
 
@@ -11979,6 +11993,13 @@
 <td>2005</td>
 <td>AIT Planet Lar</td>
 <td><a href="AITPlanetLar/AITPlanetLar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Dragon</td>
+<td>1985</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23477,13 +23498,6 @@
 </tr>
 
 <tr>
-<td>Death Of Groo The Wanderer</td>
-<td>1987</td>
-<td>Epic</td>
-<td><a href="DeathOfGrooTheWanderer/DeathOfGrooTheWanderer.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Death Of Love</td>
 <td>2018</td>
 <td>Image</td>
@@ -27961,6 +27975,13 @@
 </tr>
 
 <tr>
+<td>Elektra: Assassin</td>
+<td>1987</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Elementals</td>
 <td>1984</td>
 <td>Comico</td>
@@ -28056,6 +28077,13 @@
 <td>1978</td>
 <td>Warp</td>
 <td><a href="Elfquest/Elfquest.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elfquest</td>
+<td>1985</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28516,7 +28544,7 @@
 <tr>
 <td>Epic Illustrated</td>
 <td>1980</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="EpicIllustrated/EpicIllustrated.html">Details</a></td>
 </tr>
 
@@ -28721,6 +28749,13 @@
 <td>1986</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Espers</td>
+<td>1986</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28980,6 +29015,13 @@
 <td>2008</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Everyman</td>
+<td>1991</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30205,6 +30247,13 @@
 <td>1988</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Farewell To Weapons</td>
+<td>1992</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36401,10 +36450,73 @@
 </tr>
 
 <tr>
+<td>Groo The Adventurer</td>
+<td>1990</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Groo The Wanderer</td>
 <td>1994</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: Death Of Groo The Wanderer</td>
+<td>1987</td>
+<td>Epic</td>
+<td><a href="DeathOfGrooTheWanderer/DeathOfGrooTheWanderer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: Sergio Aragones Groo</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="Groo/Groo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: The Groo Bazaar</td>
+<td>1991</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: The Groo Carnival</td>
+<td>1991</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: The Groo Chronicles</td>
+<td>1989</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: The Groo Expose</td>
+<td>1993</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: The Groo Festival</td>
+<td>1991</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Groo: The Live Of Groo</td>
+<td>1993</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36598,8 +36710,15 @@
 
 <tr>
 <td>Gun Theory</td>
+<td>2003</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gun Theory</td>
 <td>2016</td>
-<td>Marvel</td>
+<td>Dark Horse</td>
 <td><a href="GunTheroy/GunTheroy.html">Details</a></td>
 </tr>
 
@@ -37713,6 +37832,13 @@
 <td>1961</td>
 <td>Gold Metal</td>
 <td><a href="GoldMetalBooks/GoldMetalBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harvey Kurtzman's Strange Adventures</td>
+<td>1990</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40712,6 +40838,13 @@
 </tr>
 
 <tr>
+<td>Incal</td>
+<td>1988</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Incognegro</td>
 <td>2009</td>
 <td>Vertigo</td>
@@ -41395,6 +41528,13 @@
 <td>2005</td>
 <td>Marvel</td>
 <td><a href="IronManExtremis/IronManExtremis.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Iron Man: Crash</td>
+<td>1988</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42530,7 +42670,7 @@
 <td>Creator</td>
 <td><a href="JimRugg/JimRugg.html">Details</a></td>
 </tr>
-MidnightMen/MidnightMen.html
+
 <tr>
 <td>Jim Starlin</td>
 <td>1949</td>
@@ -49645,7 +49785,7 @@ MidnightMen/MidnightMen.html
 <tr>
 <td>Marshal Law</td>
 <td>1987</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="MarshalLaw/MarshalLaw.html">Details</a></td>
 </tr>
 
@@ -49654,6 +49794,13 @@ MidnightMen/MidnightMen.html
 <td>1992</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marshall Law: Crime And Punishment Takes Manhattan</td>
+<td>1989</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49820,7 +49967,7 @@ MidnightMen/MidnightMen.html
 <tr>
 <td>Marvel Fanfare</td>
 <td>1982</td>
-<td>Epic</td>
+<td>Marvel</td>
 <td><a href="MarvelFanfare/MarvelFanfare.html">Details</a></td>
 </tr>
 
@@ -50838,6 +50985,13 @@ MidnightMen/MidnightMen.html
 </tr>
 
 <tr>
+<td>Memories</td>
+<td>1992</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Memory Palaces</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -51067,6 +51221,7 @@ MidnightMen/MidnightMen.html
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
+
 <tr>
 <td>Metaphase</td>
 <td>2015</td>
@@ -51082,7 +51237,14 @@ MidnightMen/MidnightMen.html
 </tr>
 
 <tr>
-<td>Metalic Silence</td>
+<td>Metallic Memories</td>
+<td>1992</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Metallic Silence</td>
 <td>2015</td>
 <td>Amigo</td>
 <td><a href="AmigoComics/AmigoComics.html">Details</a></td>
@@ -54655,6 +54817,13 @@ MidnightMen/MidnightMen.html
 <td>1996</td>
 <td>Big Entertainment</td>
 <td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
+<td>Neuromancer</td>
+<td>1989</td>
+<td>Epic</td>
+<td><a href="MarvelGraphicNovel/MarvelGraphicNovel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58473,7 +58642,7 @@ MidnightMen/MidnightMen.html
 <tr>
 <td>Pinhead</td>
 <td>1993</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="Pinhead/Pinhead.html">Details</a></td>
 </tr>
 
@@ -58482,6 +58651,13 @@ MidnightMen/MidnightMen.html
 <td>1951</td>
 <td>Fawcett</td>
 <td><a href="Fawcett/Fawcett.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pinhead vs. Martial Law</td>
+<td>1994</td>
+<td>Epic</td>
+<td><a href="Pinhead/Pinhead.html">Details</a></td>
 </tr>
 
 <tr>
@@ -65493,6 +65669,13 @@ MidnightMen/MidnightMen.html
 </tr>
 
 <tr>
+<td>Sequential Vacation</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sera And The Royal Stars</td>
 <td>2019</td>
 <td>Vault</td>
@@ -65528,24 +65711,10 @@ MidnightMen/MidnightMen.html
 </tr>
 
 <tr>
-<td>Sergio Aragones Groo</td>
-<td>1998</td>
-<td>Dark Horse</td>
-<td><a href="Groo/Groo.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Sergio Aragones Massacres Marvel</td>
 <td>1996</td>
 <td>Marvel</td>
 <td><a href="SergioAragonesMassacresMarvel/SergioAragonesMassacresMarvel.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Sequential Vacation</td>
-<td>2008</td>
-<td>Secret Acres</td>
-<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67871,6 +68040,13 @@ MidnightMen/MidnightMen.html
 </tr>
 
 <tr>
+<td>Someplace Strange</td>
+<td>1988</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Somerset Holmes</td>
 <td>1983</td>
 <td>PC</td>
@@ -69331,6 +69507,13 @@ MidnightMen/MidnightMen.html
 <td>1984</td>
 <td>Marvel</td>
 <td><a href="Starriors/Starriors.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stars My Destination</td>
+<td>1992</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71177,7 +71360,7 @@ MidnightMen/MidnightMen.html
 <tr>
 <td>Swords Of The Swashbucklers</td>
 <td>1985</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="SwordsOfTheSwashbucklers/SwordsOfTheSwashbucklers.html">Details</a></td>
 </tr>
 
@@ -78594,7 +78777,7 @@ MidnightMen/MidnightMen.html
 <tr>
 <td>William Gibson's Neuromancer</td>
 <td>1989</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="MarvelGraphicNovel/MarvelGraphicNovel.html">Details</a></td>
 </tr>
 
