--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -413,6 +413,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW17.jpg">30 Days of Night: Return to Barrow</a> (2004) 
 <li><a href="IDW18.jpg">30 Days of Night: Spreading the Disease</a> (2006) 
 <li><a href="IDW19.jpg">A-Team: War Stories</a> (2010) 
+<li><a href="IDW349.jpg">Adventures of Simone &amp; Ajax</a> (2010) 
 <li><a href="IDW20.jpg">Adventures in Oz</a> (2006) 
 <li><a href="IDW21.jpg">Alan Robert's Killogy</a> (2006)
 <li><a href="IDW22.jpg">Aleister Arcane</a> (2004) 
