--- a/WarnerBooks/WarnerBooks.html
+++ b/WarnerBooks/WarnerBooks.html
@@ -38,7 +38,9 @@
 </p><p>
 <a href="https://www.grandcentralpublishing.com/">Warner Books Website</a>
 </p><p>
-Warner Books is now owned by Grand Central Publishing. Grand Central Publishing is a division of Hachette Book Group. Grand Central Publishing came into existence in March 2006 after Time Warner sold the Time Warner Book Group to Hachette Livre. They are considered one of the big-six publishing companies, along with <a href="../HarperCollins/HarperCollins.html">Harper Collins</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Penguin Random House</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>, and <a href="../SimonSchuster/SimonSchuster.html">Simon & Schuster</a>.
+Warner Books began in 1970 with the acquisition of Paperback Library from Coronet Communications. In 1972 the name of the paperback line was changed to Warner Paperback Library and the name Warner Books was taken as the name for the entire publishing company. They became Time Warner after May 1990 after the merger with Time/Life, then AOL Time Warner in 2002 after the merger with America Online, and then again Time Warner in 2004. In March 2006, Warner Books was sold to Hachette Livre, who renamed it Grand Central Publishing.
+</p><p> 
+Grand Central Publishing one of the big-six publishing companies, along with <a href="../HarperCollins/HarperCollins.html">Harper Collins</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Penguin Random House</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>, and <a href="../SimonSchuster/SimonSchuster.html">Simon & Schuster</a>.
 </p><p>
 Titles
 </p><p>
@@ -55,28 +57,24 @@ Titles
 <li><a href="WarnerBooks11.jpg">Camelot 3000</a>  	1988
 <li><a href="WarnerBooks12.jpg">Catwoman: Her Sister's Keeper</a>  	1992
 <li><a href="WarnerBooks13.jpg">Dita in the Chelsea Girl</a> 	1992
-<li>Duck Edwing's Mad Ventures of Almost Superheroes  	1990
-<li>Encyclopedia of Comic Book Heroes  	1976
-<li>Enemy Ace: War Idyll  	1992
-<li>Fish Police  	1987
-<li>Hellblazer: Original Sins  	1993
-<li>Looney Tunes 	1996
-<li>Mad: A Mad Carnival  	1982
-<li>Mad: A Mad Guide to Leisure Time  	1976
-<li>Mad: A Mad Look at Old Movies  	1973
-<li>Mad: A Mad Look at TV  	1976
-<li>Mad: A Mad Scramble  	1977
-<li>Mad: A Mad Treasure Chest  	1978
-<li>Mad: Al Jaffee's Mad (Yecch!) Monstrosities  	1974
-<li>Mad: Al Jaffee's Mad (Yeech!) Rejects  	1990
-<li>Mad: Al Jaffee's Mad Book of Magic and Other Dirty Tricks  	1976
-<li>Mad: Al Jaffee's Mad Inventions  	1978
-<li>Mad: Boiling Mad  	1973
-<li>Mad: Burning Mad  	1975
-<li>Mad: Dave Berg Looks Around  	1975
-<li>Mad: Dave Berg Looks at Living  	1973
-<li>Mad: Dave Berg Looks at People  	1973
-<li>Mad: Dave Berg Looks at the U.S.A.  	1977
+<li><a href="WarnerBooks14.jpg">Fish Police</a> 1987
+<li><a href="WarnerBooks15.jpg">Hellblazer: Original Sins</a> 1993
+<li><a href="WarnerBooks16.jpg">Mad: A Mad Carnival</a>	1982
+<li><a href="WarnerBooks17.jpg">Mad: A Mad Guide to Leisure Time</a> 1976
+<li><a href="WarnerBooks18.jpg">Mad: A Mad Look at Old Movies</a>  	1973
+<li><a href="WarnerBooks19.jpg">Mad: A Mad Look at TV</a>  	1976
+<li><a href="WarnerBooks20.jpg">Mad: A Mad Scramble</a>  	1977
+<li><a href="WarnerBooks21.jpg">Mad: A Mad Treasure Chest</a>  	1978
+<li><a href="WarnerBooks22.jpg">Mad: Al Jaffee's Mad (Yecch!) Monstrosities</a>	1974
+<li><a href="WarnerBooks23.jpg">Mad: Al Jaffee's Mad (Yeech!) Rejects</a>  	1990
+<li><a href="WarnerBooks24.jpg">Mad: Al Jaffee's Mad Book of Magic and Other Dirty Tricks</a>  	1976
+<li><a href="WarnerBooks25.jpg">Mad: Al Jaffee's Mad Inventions</a>	1978
+<li><a href="WarnerBooks26.jpg">Mad: Boiling Mad</a>  	1973
+<li><a href="WarnerBooks27.jpg">Mad: Burning Mad</a>  	1975
+<li><a href="WarnerBooks28.jpg">Mad: Dave Berg Looks Around</a>	1975
+<li><a href="WarnerBooks29.jpg">Mad: Dave Berg Looks at Living</a>  	1973
+<li><a href="WarnerBooks30.jpg">Mad: Dave Berg Looks at People</a>  	1973
+<li><a href="WarnerBooks31.jpg">Mad: Dave Berg Looks at the U.S.A.</a>  	1977
 <li>Mad: Dave Berg Looks, Listens and Laughs  	1979
 <li>Mad: Dave Berg Takes a Loving Look  	1977
 <li>Mad: Dave Berg's Mad Trash  	1977
@@ -86,6 +84,7 @@ Titles
 <li>Mad: Don Martin Forges Ahead  	1977
 <li>Mad: Don Martin Steps Further Out  	1975
 <li>Mad: Dr. Jekyll and Mr. Mad  	1975
+<li>Mad: Duck Edwing's Mad Ventures of Almost Superheroes  	1990
 <li>Mad: Eternally Mad  	1983
 <li>Mad: Fighting Mad  	    1974
 <li>Mad: History Gone Mad  	1977
