--- a/index.html
+++ b/index.html
@@ -1594,7 +1594,7 @@
 </tr>
 
 <tr>
-<td>Abbot And Costello</td>
+<td>Abbott And Costello</td>
 <td>1968</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
@@ -1752,6 +1752,13 @@
 <td>1995</td>
 <td>Epic</td>
 <td><a href="AbrahamStone/AbrahamStone.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Abraham Stone</td>
+<td>2020</td>
+<td>DarkHorse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2266,6 +2273,13 @@
 </tr>
 
 <tr>
+<td>Adrenalynn: Weapon Of War</td>
+<td>2001</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adult Contemporary</td>
 <td>2015</td>
 <td>Drawn &amp; Quarterly</td>
@@ -2413,14 +2427,21 @@
 </tr>
 
 <tr>
-<td>Adventure Into The Unknown</td>
+<td>Adventures Into The Unknown</td>
 <td>1990</td>
 <td>A-Plus</td>
 <td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Adventure Into The Unknown Halloween Special</td>
+<td>Adventures Into The Unknown</td>
+<td>2012</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Into The Unknown Halloween Special</td>
 <td>1991</td>
 <td>A-Plus</td>
 <td><a href="A-Plus/A-Plus.html">Details</a></td>
@@ -2476,6 +2497,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Blanche</td>
+<td>2009</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Captain America</td>
 <td>1991</td>
 <td>Marvel</td>
@@ -2515,6 +2543,13 @@
 <td>1991</td>
 <td>A-Plus</td>
 <td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Dr. McNinja</td>
+<td>2011</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2650,6 +2685,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Nilson Groundthumper</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Professor Thintwhistle</td>
 <td>1991</td>
 <td>Fantagraphics</td>
@@ -2769,7 +2811,7 @@
 </tr>
 
 <tr>
-<td>Adventures on The Fringe</td>
+<td>Adventures On The Fringe</td>
 <td>1992</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
@@ -2948,6 +2990,13 @@
 <td>1998</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Age Of Conan</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3322,6 +3371,13 @@
 </tr>
 
 <tr>
+<td>Al Capp's Li'l Abner: The Frazetta Years</td>
+<td>2003</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Al Columbia</td>
 <td>1970</td>
 <td>Creator</td>
@@ -3354,6 +3410,13 @@
 <td>1931</td>
 <td>Creator</td>
 <td><a href="AlWilliamson/AlWilliamson.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Al Williamson: Hidden Lands</td>
+<td>2004</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3588,6 +3651,13 @@
 </tr>
 
 <tr>
+<td>Alena</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aletheia</td>
 <td>2008</td>
 <td>Image</td>
@@ -3752,7 +3822,7 @@
 </tr>
 
 <tr>
-<td>Alice In Sunderland: An Entertainment</td>
+<td>Alice In Sunderland</td>
 <td>2007</td>
 <td>Dark Horse</td>
 <td><a href="AliceInSunderland/AliceInSunderland.html">Details</a></td>
@@ -7856,6 +7926,13 @@
 <td>2006</td>
 <td>Ape</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Atlantis: The Lost Empire</td>
+<td>2001</td>
+<td>DarkHorse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14375,7 +14452,7 @@
 </tr>
 
 <tr>
-<td>Brian Pulido's Lady Death: Art of Juan Jose Ryp</td>
+<td>Brian Pulido's Lady Death: Art Of Juan Jose Ryp</td>
 <td>2005</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
@@ -18056,7 +18133,7 @@
 </tr>
 
 <tr>
-<td>Choke Gasp! Best 75 Years of EC Comics</td>
+<td>Choke Gasp! Best 75 Years Of EC Comics</td>
 <td>2019</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
@@ -18084,7 +18161,7 @@
 </tr>
 
 <tr>
-<td>Cholly And Flytrap: New Adventures of Cholly and Flytrap</td>
+<td>Cholly And Flytrap: New Adventures Of Cholly and Flytrap</td>
 <td>1991</td>
 <td>Epic</td>
 <td><a href="ChollyFlytrap/ChollyFlytrap.html">Details</a></td>
@@ -18531,7 +18608,7 @@
 </tr>
 
 <tr>
-<td>Classified Secrets of Infestation</td>
+<td>Classified Secrets Of Infestation</td>
 <td>2019</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
@@ -19129,6 +19206,13 @@
 <td>1995</td>
 <td>Starhead</td>
 <td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Colonel Weird: Cosmagog</td>
+<td>2020</td>
+<td>DarkHorse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20475,7 +20559,7 @@
 </tr>
 
 <tr>
-<td>Creativity of Ditko</td>
+<td>Creativity Of Ditko</td>
 <td>2012</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
@@ -21203,7 +21287,7 @@
 </tr>
 
 <tr>
-<td>Crypt of Screams</td>
+<td>Crypt Of Screams</td>
 <td>2017</td>
 <td>American Mythology</td>
 <td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
@@ -32929,7 +33013,7 @@
 </tr>
 
 <tr>
-<td>From Aargh! to Zap!: Harvey Kurtzman's Visual History of the Comics</td>
+<td>From Aargh! to Zap!: Harvey Kurtzman's Visual History Of the Comics</td>
 <td>1991</td>
 <td>Simon And Schuster</td>
 <td><a href="FromAarghToZap/FromAarghToZap.html">Details</td>
@@ -45597,6 +45681,13 @@
 </tr>
 
 <tr>
+<td>Koshchei The Deathless</td>
+<td>2018</td>
+<td>DarkHorse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kraven's Last Hunt</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -51370,7 +51461,7 @@
 </tr>
 
 <tr>
-<td>Michael Turner's Cannon: Dawn of War</td>
+<td>Michael Turner's Cannon: Dawn Of War</td>
 <td>2004</td>
 <td>Aspen</td>
 <td><a href="AspenComics/AspenComics.html">Details</a></td>
@@ -53022,7 +53113,7 @@
 </tr>
 
 <tr>
-<td>More Collected Adventures of Captain Jack</a>
+<td>More Collected Adventures Of Captain Jack</a>
 <td>1996</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
@@ -61227,6 +61318,13 @@
 </tr>
 
 <tr>
+<td>Rasputin: The Voice Of The Dragon</td>
+<td>2018</td>
+<td>DarkHorse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rat</a>
 <td>1997</td>
 <td>MU Press</td>
@@ -63348,14 +63446,14 @@
 </tr>
 
 <tr>
-<td>Rocky And Bullwinkle Present: the Best of Boris &amp; Matasha</td>
+<td>Rocky And Bullwinkle Present: the Best Of Boris &amp; Matasha</td>
 <td>2019</td>
 <td>American Mythology</td>
 <td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Rocky And Bullwinkle Present: the Best of Dudley Do-Right</td>
+<td>Rocky And Bullwinkle Present: the Best Of Dudley Do-Right</td>
 <td>2019</td>
 <td>American Mythology</td>
 <td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
@@ -70091,7 +70189,7 @@
 </tr>
 
 <tr>
-<td>Strange Adventures of H.P. Lovecraft</td>
+<td>Strange Adventures Of H.P. Lovecraft</td>
 <td>2009</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -79139,7 +79237,7 @@
 </tr>
 
 <tr>
-<td>Wizard of Id</td>
+<td>Wizard Of Id</td>
 <td>1970</td>
 <td>Gold Metal</td>
 <td><a href="GoldMetalBooks/GoldMetalBooks.html">Details</a></td>
@@ -80576,7 +80674,7 @@
 </tr>
 
 <tr>
-<td>Zhuangzi Speaks: The Music of Nature</td>
+<td>Zhuangzi Speaks: The Music Of Nature</td>
 <td>1992</td>
 <td>Princeton University Press</td>
 <td><a href="ZhuangziSpeaks/ZhuangziSpeaks.html">Details</a></td>
