--- a/MikeMignola/MikeMignola.html
+++ b/MikeMignola/MikeMignola.html
@@ -25,6 +25,10 @@
 <div class="mySlides" style="text-align: center;"><img src="MikeMignola4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MikeMignola5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MikeMignola6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Topps/Topps5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DarkHorse/Darkhorse351.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MikeMignola7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MikeMignola8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,7 +36,7 @@
 </p><p>
 Michael Joseph Mignola (born September 16, 1960) is an American comics artist and writer best known for creating <a href="../Hellboy/Hellboy.html">Hellboy</a> for Dark Horse Comics, part of a shared universe of titles including <a href="../BPRD/BPRD.html">B.P.R.D.</a>, <a href="../AbeSapien/AbeSapien.html">Abe Sapien</a>, <a href="../LobsterJohnson/LobsterJohnson.html">Lobster Johnson</a>, <a href="../Witchfinder/Witchfinder.html">Witchfinder</a> and various spinoffs. He has also created other supernatural and paranormal themed titles for Dark Horse including Baltimore, Joe Golem and <a href="../AmazingScrewOnHead/AmazingScrewOnHead.html">The Amazing Screw-On Head</a>.
 </p><p>
-Mignola's film work includes Bram Stoker's Dracula (1992), Atlantis: The Lost Empire (2001), Blade II (2002), the 2004 adaptation of Hellboy, its 2008 sequel and 2019 reboot. 
+Mignola's film work includes <a href="../Topps/Topps5.jpg">Bram Stoker's Dracula</a> (1992), <a href="../DarkHorse/Darkhorse351.jpg">Atlantis: The Lost Empire</a> (2001), Blade II (2002), the 2004 adaptation of Hellboy, its 2008 sequel and 2019 reboot. 
 </p><p>
 Prior to 1994 Mignola had done work-for-hire illustration. That year, Dark Horse Comics released Hellboy: Seed of Destruction, Mignola's creator-owned project. Though he wrote the story himself, it was scripted by John Byrne. The next Hellboy story, The Wolves of Saint August, was completely written and drawn by Mignola. Since then all Hellboy stories have been written solely by Mignola with the exception of They That Go Down to the Sea in Ships, which was co-written by Joshua Dysart.
 </p><p>
